--- a/capputeeno/src/app/page.module.css
+++ b/capputeeno/src/app/page.module.css
@@ -1,9 +1,9 @@
 .main {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  padding: 34px 160px;
+
 }
 
