feat: created cart page and adjusting the intern navigation

--- a/capputeeno/src/app/globals.css
+++ b/capputeeno/src/app/globals.css
@@ -10,6 +10,8 @@
   --delete-color: #DE3838;
   --orange-low: #FFA585;
   --secondary-text: #617480;
+  --border-color:#A8A8B3;
+  --success-color: #51B853;
 
   
 }
